--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1 {
   justify-content: center;
 }
 .popup {
-  background: #2980b9;
+  background: rebeccapurple;
   border-radius: 5px;
   box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -108,14 +108,22 @@ h1 {
   border-radius: 10px 10px 0 0;
   padding: 15px 20px;
   position: absolute;
-  bottom: -50px;
+  bottom: 486px;
+  z-index: 1;
   transition: transform 0.3s ease-in-out;
+  visibility: hidden;
 }
 .notification-container p {
   margin: 0;
 }
-.notification-container.show {
+.notification-container .show {
+  visibility: visible;
   transform: translateY(-50px);
+}
+.meaning-container {
+  text-align: center;
+  margin-bottom: 200px;
+  max-width: 600px;
 }
 button {
   background-color: rebeccapurple;
